<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".UI.Checkout.ChooseCheckoutActivity"
    android:layout_margin="15dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_checkout"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/btnChooseLocalCheckout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/local_checkout"/>
    <Button
        android:id="@+id/btnChooseGlobalCheckout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/global_checkout"/>
</LinearLayout>