<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="@dimen/_150sdp"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:elevation="3dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/imageHomeProduct"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"
            android:src="@drawable/ic_broken_image"
            android:contentDescription="@string/content_description" />
        <TextView
            android:id="@+id/textHomeProductName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_name"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:padding="3dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
        <TextView
            android:id="@+id/textHomeProductPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text="@string/item_price"
            android:padding="3dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
    </LinearLayout>


</androidx.cardview.widget.CardView>